# rust-learning

./: .gitignore  README.md
Snake/: Cargo.toml
Snake/src/: lib.rs  main.rs
Tetris/: Cargo.toml
minigrep/src/: lib.rs  main.rs
run-rust-on-android/: README.md  build.gradle  settings.gradle
run-rust-on-android/app/: build.gradle
run-rust-on-android/app/src/main/: AndroidManifest.xml
run-rust-on-android/app/src/main/java/com/example/rust/: JNICallback.java  MainActivity.java
run-rust-on-android/app/src/main/res/layout/: activity_main.xml
run-rust-on-android/app/src/main/res/values/: strings.xml  themes.xml
run-rust-on-android/app/src/main/res/values-night/: themes.xml
run-rust-on-android/app/src/main/rust/: Cargo.toml
run-rust-on-android/app/src/main/rust/src/: lib.rs
run-rust-on-android/gradle/wrapper/: gradle-wrapper.properties
run-wgpu-on-android/: build.gradle  settings.gradle
run-wgpu-on-android/app/: build.gradle
run-wgpu-on-android/app/src/androidTest/java/com/example/wgpu/: ExampleInstrumentedTest.java
run-wgpu-on-android/app/src/main/: AndroidManifest.xml
run-wgpu-on-android/app/src/main/res/layout/: activity_main.xml
run-wgpu-on-android/app/src/main/res/values/: strings.xml  themes.xml
run-wgpu-on-android/app/src/main/res/values-night/: themes.xml
run-wgpu-on-android/app/src/main/rust/: Cargo.toml
run-wgpu-on-android/app/src/main/rust/src/: android.rs  app_state.rs  lib.rs  triangle.rs
run-wgpu-on-android/gradle/wrapper/: gradle-wrapper.properties
webServer/: Cargo.toml
webServer/src/: lib.rs  main.rs
(+4 files in other folders)
