[package]
authors = ["jinleili"]
edition = "2021"       #选择一个特定的 Rust 版本，如果没有指定版本，它将默认为 2015。不填会出现 Metal API enabled on non-Apple OS. If your project is not using resolver="2" in Cargo.toml, it should.
name = "wgpu-on-app"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = "0.12.0"
raw-window-handle = "0.4.3"
ndk-sys = "0.3.0"
log = "0.4.17"
android_logger = "0.10.1"
jni = "0.19"
jni_fn = "0.1"
pollster = "0.2.5"
